Refactoring. Search by text added